e2e/__tests__/__snapshots__/test-helpers.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test-helpers 1`] = `
  × jest --no-cache
  ↳ exit code: 1
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS ./pass.spec.ts
  FAIL ./fail.spec.ts
    ● Test suite failed to run
  
      TypeScript diagnostics (customize using \`[jest-config].globals.ts-jest.diagnostics\` option):
      fail.spec.ts:7:10 - error TS2554: Expected 0 arguments, but got 1.
  
      7   expect(mocked(foo)('hello')).toBeUndefined()
                 ~~~~~~~~~~~~~~~~~~~~
      fail.spec.ts:9:46 - error TS2345: Argument of type '42' is not assignable to parameter of type 'string'.
  
      9   expect(mocked(bar, true).dummy.deep.deeper(42)).toBeUndefined()
                                                     ~~
  
  ts-jest[root] (WARN) The \`mocked\` helper has been moved to \`ts-jest/utils\`. Use \`import { mocked } from 'ts-jest/utils'\` instead.
  PASS ./deprecated.spec.ts
  
  Test Suites: 1 failed, 2 passed, 3 total
  Tests:       4 passed, 4 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`with esModuleInterop set to false 1`] = `
  × jest --no-cache
  ↳ exit code: 1
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS ./pass.spec.ts
  FAIL ./fail.spec.ts
    ● Test suite failed to run
  
      TypeScript diagnostics (customize using \`[jest-config].globals.ts-jest.diagnostics\` option):
      fail.spec.ts:7:10 - error TS2554: Expected 0 arguments, but got 1.
  
      7   expect(mocked(foo)('hello')).toBeUndefined()
                 ~~~~~~~~~~~~~~~~~~~~
      fail.spec.ts:9:46 - error TS2345: Argument of type '42' is not assignable to parameter of type 'string'.
  
      9   expect(mocked(bar, true).dummy.deep.deeper(42)).toBeUndefined()
                                                     ~~
  
  ts-jest[root] (WARN) The \`mocked\` helper has been moved to \`ts-jest/utils\`. Use \`import { mocked } from 'ts-jest/utils'\` instead.
  PASS ./deprecated.spec.ts
  
  Test Suites: 1 failed, 2 passed, 3 total
  Tests:       4 passed, 4 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;
